# machine

./: .gitignore  CMakeLists.txt  README.md  app.cpp  app.h  compile_commands.json  main.cpp
src/: AppWindow.cpp  AppWindow.h  DX11.cpp  DX11.h  DebugConsole.h  Engine.cpp  Engine.h  Failure.cpp  Failure.h  Graphics.cpp  Graphics.h  Machine.cpp  Machine.h  Main.cpp  MiniMath.h  Renderer.cpp  Renderer.h  Vertex.h
src/shaders/: PixelShader.hlsl  VertexShader.hlsl
